[gd_scene load_steps=14 format=3 uid="uid://b1bb4pq2t7ldg"]

[ext_resource type="PackedScene" uid="uid://b67qspn68qjff" path="res://scenes/levels/level.tscn" id="1_7w30t"]
[ext_resource type="Script" path="res://scenes/levels/set3/hard_lvl_1.gd" id="2_justu"]
[ext_resource type="LabelSettings" uid="uid://8y2a3ofxlyr5" path="res://graphics/Resources/btnText.tres" id="3_kq1x5"]
[ext_resource type="PackedScene" uid="uid://bys8bnmxu0j68" path="res://scenes/objects/exit_door.tscn" id="3_tvjem"]
[ext_resource type="PackedScene" uid="uid://ckvx0sllba6aw" path="res://scenes/objects/red_door.tscn" id="4_6qh66"]
[ext_resource type="PackedScene" uid="uid://nola2gmmenrb" path="res://scenes/objects/window.tscn" id="4_cgl42"]
[ext_resource type="PackedScene" uid="uid://bv7xkckdjm1wa" path="res://scenes/objects/blue_door.tscn" id="5_xjjeh"]
[ext_resource type="PackedScene" uid="uid://ci2itye8vtqtr" path="res://scenes/objects/box_1.tscn" id="6_21nme"]
[ext_resource type="PackedScene" uid="uid://thc4wbitnyda" path="res://scenes/distortion_set_3.tscn" id="7_0w8t8"]
[ext_resource type="PackedScene" uid="uid://dai547al1whlx" path="res://scenes/objects/short_platform.tscn" id="7_y0h71"]

[sub_resource type="Animation" id="Animation_p2kj6"]
resource_name = "DistortionExtreme"
length = 16.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DistortionSet3:material:shader_parameter/distortionTexture:noise:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4, 8, 12),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(1000, 1000, 0), Vector3(0, 0, 0), Vector3(-1000, -1000, 0)]
}

[sub_resource type="Animation" id="Animation_j3t03"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DistortionSet3:material:shader_parameter/distortionTexture:noise:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ubhvj"]
_data = {
"DistortionExtreme": SubResource("Animation_p2kj6"),
"RESET": SubResource("Animation_j3t03")
}

[node name="HardLvl1" instance=ExtResource("1_7w30t")]
script = ExtResource("2_justu")

[node name="DarkRoomBg" parent="Background" index="0"]
metadata/_edit_lock_ = true

[node name="Text" type="Label" parent="Background" index="1"]
offset_left = 231.0
offset_top = -1035.0
offset_right = 631.0
offset_bottom = -936.0
text = "WHAT IS HAPPENING?
"
label_settings = ExtResource("3_kq1x5")

[node name="Window" parent="Background" index="2" instance=ExtResource("4_cgl42")]
position = Vector2(480, -364)

[node name="Window2" parent="Background" index="3" instance=ExtResource("4_cgl42")]
position = Vector2(1356, -910)

[node name="Window3" parent="Background" index="4" instance=ExtResource("4_cgl42")]
position = Vector2(2148, -856)

[node name="DistortionSet3" parent="." index="1" instance=ExtResource("7_0w8t8")]
position = Vector2(989, -804)
metadata/_edit_lock_ = true

[node name="TileMap" parent="." index="2"]
layer_0/tile_data = PackedInt32Array(-65536, 131072, 2, -1245184, 65536, 0, -1245151, 65536, 1, -65503, 327680, 0, -1179648, 131072, 0, -1114112, 131072, 0, -1048576, 131072, 0, -983040, 131072, 0, -917504, 131072, 0, -851968, 131072, 0, -786432, 131072, 0, -720896, 131072, 0, -655360, 131072, 0, -589824, 131072, 0, -524288, 131072, 0, -458752, 131072, 0, -393216, 131072, 0, -327680, 131072, 0, -262144, 131072, 0, -196608, 131072, 0, -131072, 131072, 0, -1245183, 0, 6, -1245182, 0, 6, -1245181, 0, 6, -1245180, 0, 6, -1245179, 0, 6, -1245178, 0, 6, -1245177, 0, 6, -1245176, 0, 6, -1245175, 0, 6, -1245174, 0, 6, -1245173, 0, 6, -1245172, 0, 6, -1245171, 0, 6, -1245170, 0, 6, -1245169, 0, 6, -1245168, 0, 6, -1245167, 0, 6, -1245166, 0, 6, -1245165, 0, 6, -1245164, 0, 6, -1245163, 0, 6, -1245162, 0, 6, -1245161, 0, 6, -1245160, 0, 6, -1245159, 0, 6, -1245158, 0, 6, -1245157, 0, 6, -1245156, 0, 6, -1245155, 0, 6, -1245154, 0, 6, -1245153, 0, 6, -1245152, 0, 6, -1179615, 131072, 1, -1114079, 131072, 1, -1048543, 131072, 1, -983007, 131072, 1, -917471, 131072, 1, -851935, 131072, 1, -786399, 131072, 1, -720863, 131072, 1, -655327, 131072, 1, -589791, 131072, 1, -524255, 131072, 1, -458719, 131072, 1, -393183, 131072, 1, -327647, 131072, 1, -262111, 131072, 1, -196575, 131072, 1, -131039, 131072, 1, -65535, 262144, 3, -65534, 262144, 3, -65533, 262144, 3, -65532, 262144, 3, -65531, 262144, 3, -65530, 262144, 3, -65529, 262144, 3, -65528, 262144, 3, -65527, 262144, 3, -65526, 262144, 3, -65525, 262144, 3, -65524, 262144, 3, -65523, 262144, 3, -65522, 262144, 3, -65521, 262144, 3, -65520, 262144, 3, -65519, 262144, 3, -65518, 262144, 3, -65517, 262144, 3, -65516, 262144, 3, -65515, 262144, 3, -65514, 262144, 3, -65513, 262144, 3, -65512, 262144, 3, -65511, 262144, 3, -65510, 262144, 3, -65509, 262144, 3, -65508, 262144, 3, -65507, 262144, 3, -65506, 262144, 3, -65505, 262144, 3, -65504, 262144, 3, -1310720, 0, 5, -1310719, 0, 5, -1310718, 0, 5, -1310717, 0, 5, -1310716, 0, 5, -1310714, 0, 5, -1310713, 0, 5, -1310712, 0, 5, -1310711, 0, 5, -1310710, 0, 5, -1310709, 0, 5, -1310708, 0, 5, -1310707, 0, 5, -1310706, 0, 5, -1310705, 0, 5, -1310704, 0, 5, -1310703, 0, 5, -1310702, 0, 5, -1310701, 0, 5, -1310700, 0, 5, -1310699, 0, 5, -1310698, 0, 5, -1310697, 0, 5, -1310696, 0, 5, -1310695, 0, 5, -1310694, 0, 5, -1310693, 0, 5, -1310692, 0, 5, -1310691, 0, 5, -1310690, 0, 5, -1310689, 0, 5, -1310688, 0, 5, -1310687, 0, 5, -1310715, 0, 5, -1310686, 0, 5, -1245150, 0, 5, -1179614, 0, 5, -1114078, 0, 5, -1048542, 0, 5, -983006, 0, 5, -917470, 0, 5, -851934, 0, 5, -786398, 0, 5, -720862, 0, 5, -655326, 0, 5, -589790, 0, 5, -524254, 0, 5, -458718, 0, 5, -393182, 0, 5, -327646, 0, 5, -262110, 0, 5, -196574, 0, 5, -131038, 0, 5, -65502, 0, 5, 0, 0, 5, 1, 0, 5, 2, 0, 5, 3, 0, 5, 4, 0, 5, 5, 0, 5, 6, 0, 5, 7, 0, 5, 8, 0, 5, 9, 0, 5, 10, 0, 5, 11, 0, 5, 12, 0, 5, 13, 0, 5, 14, 0, 5, 15, 0, 5, 16, 0, 5, 17, 0, 5, 18, 0, 5, 19, 0, 5, 20, 0, 5, 21, 0, 5, 22, 0, 5, 23, 0, 5, 24, 0, 5, 25, 0, 5, 26, 0, 5, 27, 0, 5, 28, 0, 5, 29, 0, 5, 30, 0, 5, 31, 0, 5, 32, 0, 5, 33, 0, 5, 34, 0, 5, -1245185, 0, 5, -1179649, 0, 5, -1114113, 0, 5, -1048577, 0, 5, -983041, 0, 5, -917505, 0, 5, -851969, 0, 5, -786433, 0, 5, -720897, 0, 5, -655361, 0, 5, -589825, 0, 5, -524289, 0, 5, -458753, 0, 5, -393217, 0, 5, -327681, 0, 5, -262145, 0, 5, -196609, 0, 5, -131073, 0, 5, -65537, 0, 5, -1, 0, 5, 65535, 0, 5, -131071, 1, 0, -131070, 1, 0, -131069, 1, 0, -131068, 1, 0, -131067, 1, 0, -131066, 1, 0, -131065, 1, 0, -131064, 1, 0, -131063, 1, 0, -131062, 1, 0, -131061, 1, 0, -131060, 1, 0, -131059, 1, 0, -131058, 1, 0, -131057, 1, 0, -131056, 1, 0, -131055, 1, 0, -131054, 1, 0, -131053, 1, 0, -131052, 1, 0, -131051, 1, 0, -131050, 1, 0, -131049, 1, 0, -131048, 1, 0, -131047, 1, 0, -131046, 1, 0, -131045, 1, 0, -131044, 1, 0, -131043, 1, 0, -131042, 1, 0, -131041, 1, 0, -131040, 1, 0, -1179647, 1, 536870912, -1179646, 1, 536870912, -1179645, 1, 536870912, -1179644, 1, 536870912, -1179643, 1, 536870912, -1179642, 1, 536870912, -1179641, 1, 536870912, -1179640, 131072, 1, -1179639, 131072, 0, -1179638, 1, 536870912, -1179637, 131072, 1, -1179636, 131072, 0, -1179635, 1, 536870912, -1179634, 1, 536870912, -1179633, 1, 536870912, -1179632, 1, 536870912, -1179631, 1, 536870912, -1179630, 1, 536870912, -1179629, 1, 536870912, -1179628, 1, 536870912, -1179627, 1, 536870912, -1179626, 1, 536870912, -262121, 262144, 3, -262120, 262144, 3, -262119, 262144, 3, -262115, 262144, 3, -262114, 262144, 3, -262113, 262144, 3, -262112, 262144, 3, -655335, 262144, 3, -524256, 262144, 3, -524257, 262144, 3, -524258, 196608, 5, -262118, 262144, 3, -262116, 262144, 3, -262139, 196608, 5, -655354, 131072, 5, -262138, 262144, 3, -655353, 262144, 3, -262137, 262144, 3, -655352, 262144, 3, -262136, 262144, 3, -262133, 196608, 5, -655348, 262144, 3, -262132, 262144, 3, -262131, 262144, 3, -1114103, 131072, 0, -1048567, 131072, 0, -983031, 131072, 0, -917495, 131072, 0, -851959, 65536, 2, -655351, 131072, 4, -262135, 196608, 4, -1114101, 131072, 1, -1048565, 131072, 1, -983029, 131072, 1, -917493, 131072, 1, -851957, 65536, 3, -262122, 262144, 3, -262117, 262144, 3, -655336, 262144, 3, -655337, 262144, 3, -655338, 262144, 3, -262129, 262144, 3, -262128, 262144, 3, -262130, 262144, 3, -655347, 262144, 3, -655346, 131072, 4, -589813, 131072, 1, -524277, 65536, 3, -655349, 131072, 5, -589815, 131072, 0, -524279, 65536, 2, -851966, 196608, 5, -851965, 262144, 3, -851964, 196608, 4, -851960, 65536, 3, -851956, 65536, 2, -1114100, 131072, 0, -1048564, 131072, 0, -983028, 131072, 0, -917492, 131072, 0, -1114104, 131072, 1, -1048568, 131072, 1, -983032, 131072, 1, -917496, 131072, 1, -851943, 65536, 2, -1179616, 1, 536870912, -1179617, 1, 536870912, -1179618, 65536, 2, -1179619, 65536, 0, -1179620, 0, 5, -1179621, 0, 5, -1179622, 0, 5, -917478, 65536, 2, -983013, 65536, 2, -1048548, 65536, 2, -1114083, 65536, 2, -1179623, 0, 5, -1114084, 65536, 0, -1114085, 0, 5, -1114086, 0, 5, -1114087, 0, 5, -1048551, 0, 5, -1048550, 0, 5, -1048549, 65536, 0, -983014, 65536, 0, -983015, 0, 5, -917479, 65536, 0, -786408, 65536, 2, -851944, 65536, 0, -1179624, 0, 5, -1114088, 0, 5, -1048552, 0, 5, -983016, 0, 5, -917480, 0, 5, -786409, 65536, 3, -851945, 131072, 1, -917481, 131072, 1, -983017, 131072, 1, -1179625, 131072, 1, -1114089, 131072, 1, -1048553, 131072, 1, -655340, 131072, 5, -262124, 196608, 5, -655342, 131072, 4, -589806, 131072, 0, -524270, 131072, 0, -458734, 65536, 2, -262126, 196608, 4, -589804, 131072, 1, -524268, 131072, 1, -655339, 262144, 3, -262123, 262144, 3, -262127, 262144, 3, -655343, 131072, 5, -589807, 131072, 1, -524271, 131072, 1, -458735, 65536, 3, -655334, 131072, 4, -589798, 65536, 2, -589803, 65536, 0, -589799, 0, 6, -589800, 0, 6, -589801, 0, 6, -589802, 0, 6, -524267, 131072, 0, -458731, 65536, 2, -458732, 65536, 3, -589810, 65536, 2, -589812, 65536, 0, -589811, 0, 6, -524276, 65536, 2, -458749, 262144, 2, -458750, 262144, 3, -458751, 262144, 3, -589816, 65536, 1, -524280, 65536, 3, -589817, 0, 6, -589818, 65536, 3)

[node name="ExitDoor" parent="Objects" index="0" instance=ExtResource("3_tvjem")]
position = Vector2(2207, -615)

[node name="RedDoor" parent="Objects" index="1" instance=ExtResource("4_6qh66")]
position = Vector2(1765, -352)

[node name="BlueDoor" parent="Objects" index="2" instance=ExtResource("5_xjjeh")]
position = Vector2(921, -352)

[node name="ShortPlatform" parent="Objects" index="3" instance=ExtResource("7_y0h71")]
position = Vector2(715, -715)

[node name="ShortPlatform4" parent="Objects" index="4" instance=ExtResource("7_y0h71")]
position = Vector2(1404, -292)

[node name="ShortPlatform2" parent="Objects" index="5" instance=ExtResource("7_y0h71")]
position = Vector2(730, -958)
rotation = 1.66679

[node name="ShortPlatform3" parent="Objects" index="6" instance=ExtResource("7_y0h71")]
position = Vector2(1359, -532)
rotation = 1.66679

[node name="Box1" parent="Objects" index="7" instance=ExtResource("6_21nme")]
position = Vector2(1817, -738)

[node name="Player" parent="." index="4"]
position = Vector2(244, -950)
metadata/_edit_lock_ = true

[node name="DirectionalLight2D" parent="Lights" index="0"]
energy = 0.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="9"]
libraries = {
"": SubResource("AnimationLibrary_ubhvj")
}
autoplay = "DistortionExtreme"

[connection signal="playerTouched" from="Objects/ExitDoor" to="." method="_on_exit_door_player_touched"]
[connection signal="playerTouched" from="Objects/RedDoor" to="." method="_on_red_door_player_touched"]
[connection signal="playerTouched" from="Objects/BlueDoor" to="." method="_on_blue_door_player_touched"]
